--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,32 @@
 [submodule "casing-dev"]
 	path = casing-dev
 	url = https://github.com/LedgerHQ/blue-casing.git
+	branch = master
 [submodule "env-dev"]
 	path = env-dev
 	url = https://github.com/LedgerHQ/blue-devenv.git
+	branch = master
 [submodule "loader-python"]
 	path = loader-python
 	url = https://github.com/LedgerHQ/blue-loader-python.git
+	branch = master
 [submodule "nonsecure-firmware-dev"]
 	path = nonsecure-firmware-dev
 	url = https://github.com/LedgerHQ/blue-nonsecure-firmware.git
+	branch = master
 [submodule "nonsecure-firmware-release-dev"]
 	path = nonsecure-firmware-release-dev
 	url = https://github.com/LedgerHQ/blue-nonsecure-firmware-releases.git
+	branch = master
 [submodule "sample-apps"]
 	path = sample-apps
 	url = https://github.com/LedgerHQ/blue-sample-apps.git
+	branch = master
 [submodule "schematics-dev"]
 	path = schematics-dev
 	url = https://github.com/LedgerHQ/blue-schematics.git
+	branch = master
 [submodule "secure-sdk-dev"]
 	path = secure-sdk-dev
 	url = https://github.com/LedgerHQ/blue-secure-sdk.git
+	branch = master
